added comuni italiani

--- a/polygon-to-address/package.json
+++ b/polygon-to-address/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-typescript": "^7.24.7",
     "@turf/turf": "^7.0.0",
+    "@types/node": "^20.14.12",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
